# Fire-Shell

./: Cargo.toml
src/: cli.rs  main.rs
src/info/: mod.rs
src/info/linux/: mod.rs  os.rs  user.rs
src/info/windows/: user.rs
src/shell/: mod.rs
src/system/: mod.rs
