[package]
name = "fire-shell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "*"

[target.'cfg(unix)'.dependencies]
libc = "*"

[target.'cfg(windows)'.dependencies]
windows-sys = {version =  "*", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_WindowsProgramming"
]}
windows-version = "*"